--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -1,13 +1,13 @@
 - [مقدمه](#menu)
 - [لیست اپراتورها](#menu)
 - [لیست خدمات اپراتور مورد نظر](#menu)
-- [پلن های در دسترس شارژ مستقیم](#menu)
-- [پکیج های شارژ مستقیم](#menu)
-- [اعتبارسنجی درخواست شارژ](#menu)
-- [ایجاد رسید خرید شارژ](#menu)
-- [لیست پکیج های اینترنت](#menu)
+- [پلن های در دسترس شارژمستقیم](#menu)
+- [پکیج های شارژمستقیم](#menu)
+- [اعتبارسنجی درخواست شارژمستقیم](#menu)
+- [ایجاد رسید خرید شارژمستقیم](#menu)
+- [لیست بسته های اینترنت](#menu)
 - [اعتبارسنجی درخواست بسته اینترنتی](#menu)
-- [ایجاد رسید بسته اینترنتی](#menu)
+- [ایجاد رسید خرید بسته اینترنتی](#menu)
 - [پرداخت شارژپلاس](#menu)
 - [لینک‌های مرتبط](#menu)
 
@@ -15,7 +15,9 @@
 ## مقدمه
 
 شارژ پلاس خدمتی است برای تمام کسب و کارهایی که علاقه مند به فروش شارژ خطوط اعتباری هستند اما امکان تامین شارژ از طریق اپراتورها را ندارند یا هزینه زیادی برای تامین آن می پردازند.
-افزایش تعداد تلفن های همراه و بالطبع افزایش تعداد سیم کارتهای اعتباری اپراتورها، باعث شده که یکی از کسب و کارهای نسبتا فراگیر در این حوزه، فروشگاههای مجازی فروش شارژ باشند. مشکلی که در این عرصه وجود دارد این است که عمدتا برای کسب وکارهای گوناگون که علاقه مند به فروش شارژ خطوط اعتباری هستند، امکان تعامل با اپراتورها وجود ندارد یا هزینه تامین این شارژ بسیار بالاست. شما با استفاده از شارژ پلاس می توانید به راحتی برای کسب و کار خود شارژ تامین نمایید و کارمزد برای فروش شارژ دریافت کنید. برای ورود به شارژ پلاس، لازم است تا در سامانه پاد ثبت نام کرده باشید تا با کاربری پاد خود به سامانه شارژ پلاس وارد شوید.
+افزایش تعداد تلفن های همراه و بالطبع افزایش تعداد سیم کارتهای اعتباری اپراتورها، باعث شده که یکی از کسب و کارهای نسبتا فراگیر در این حوزه، فروشگاههای مجازی فروش شارژ باشند. مشکلی که در این عرصه وجود دارد این است که عمدتا برای کسب وکارهای گوناگون که علاقه مند به فروش شارژ خطوط اعتباری هستند، امکان تعامل با اپراتورها وجود ندارد یا هزینه تامین این شارژ بسیار بالاست. شما با استفاده از شارژ پلاس می توانید به راحتی برای کسب و کار خود شارژ به صورت TopUp یا شارژمستقیم و بسته‌ی اینترنتی  تامین نمایید و کارمزد برای فروش شارژ دریافت کنید. برای ورود به شارژ پلاس، لازم است تا در سامانه پاد ثبت نام کرده باشید تا با کاربری پاد خود به سامانه شارژ پلاس وارد شوید.
+<br/>
+سرویس فروش شارژ به صورت پین‌کد، به زودی ارائه می‌گردد.
 
 ### هشدار
 **برای تمام درخواست ها Bearer Authentication Token الزامی است.**
@@ -31,17 +33,17 @@ B(دریافت لیست اپراتورها)
 B--> |انتخاب اپراتور مورد نظر| C
 C(دریافت لیست خدمات اپراتور مورد نظر)---D
 D{تعیین نوع خدمات}  
-D-.-> |شارژ مستقیم| M
-M(پلن های در دسترس شارژ مستقیم)---N
-N(لیست پکیج های شارژ مستقیم)---O
+D-.-> |شارژمستقیم| M
+M(پلن های در دسترس شارژمستقیم)---N
+N(لیست پکیج های شارژمستقیم)---O
 O{اعتبارسنجی}
 O-.-> |Not ok| N
 O-.-> |Not ok| M
 O-.-> |ok| P
-P(ایجاد رسید خرید شارژ مستقیم)---Q
+P(ایجاد رسید خرید شارژمستقیم)---Q
 Q(پرداخت شارژپلاس)---Z
 D-.-> |بسته اینترنتی| F
-F(لیست پکیج های اینترنت)---G 
+F(لیست بسته های اینترنت)---G 
 G{اعتبارسنجی}
 G-.-> |Not ok| F
 G-.-> |ok| H
@@ -134,7 +136,7 @@ print_r($result);
 
 
 
-## پلن های در دسترس شارژ مستقیم
+## پلن های در دسترس شارژمستقیم
 
 با استفاده از این سرویس شما می توانید لیست پلن‌ها یا طرح‌های مربوط به یک خدمت اپراتور را دریافت نمایید. به طور مثال طرح جوانان یا طرح بانوان خرید شارژمستقیم ایرانسل
 
@@ -176,7 +178,7 @@ print_r($result);
 
 
 
-## پکیج های شارژ مستقیم
+## پکیج های شارژمستقیم
 
 با این سرویس می توانید حداقل و حداکثر مبلغ خرید شارژمستقیم را به تفکیک اپراتور و طرح خرید شارژ دریافت نمایید. همچنین آیتم step نمایانگر روند افزایشی مبالغ است. برای مثال، حداقل مبلغ 10000 و حداکثر مبلغ 2000000 ریال برای طرح عادی همراه اول، که مبالغ به صورت 1000 ریالی افزایش داده می شود (یعنی 11000 ریال، 12000 ریال و ...)
 
@@ -218,7 +220,7 @@ print_r($result);
 
 
 
-## اعتبارسنجی درخواست شارژ
+## اعتبارسنجی درخواست شارژمستقیم
 
 اعتبارسنجی درخواست خرید شارژمستقیم به کمک این سرویس انجام می شود. یعنی قبل از صدور  رسید، مجدد مقادیر (از جمله provider، plan، phoneNumber و.. )  Recheck می شوند و در صورت صحت اعتبارسنجی صورت گرفته، پاسخ تایید مبنی بر فراخوانی API ایجاد فاکتور داده می شود
 
@@ -267,7 +269,7 @@ print_r($result);
 
 
 
-## ایجاد رسید خرید شارژ
+## ایجاد رسید خرید شارژمستقیم
 
 درصورتی که اعتبارسنجی درخواست خرید شما موفق بوده باشد، در اینجا رسید یا فاکتور خرید شارژمستقیم را می توانید دریافت کنید.
 
@@ -316,7 +318,7 @@ print_r($result);
 
 
 
-## لیست پکیج های اینترنت
+## لیست بسته های اینترنت
 
 از طریق این سرویس می توانید لیست بسته‌های اینترنتی را بر اساس اپراتور (provider) و  بازه زمانی مصرف بسته (package_time) و نوع سیم‌کارت (sim_type) شامل اعتباری یا دائمی ، دریافت کنید.
 
@@ -362,7 +364,7 @@ print_r($result);
 
 ## اعتبارسنجی درخواست بسته اینترنتی
 
-به منظور سنجش صحت درخواست برای ایجاد رسید خرید در مرحله بعد می باشد.
+همانند اعتبارسنجی درخواست شارژمستقیم است. این سرویس به منظور سنجش صحت درخواست برای ایجاد رسید خرید بسته اینترنتی در مرحله بعد می باشد.
 
 <div class="tab-start">
 </div>
@@ -408,7 +410,7 @@ print_r($result);
 
 
 
-## ایجاد رسید بسته اینترنتی
+## ایجاد رسید خرید بسته اینترنتی
 
 به منظور ایجاد رسید خرید می باشد.
 
@@ -459,7 +461,7 @@ print_r($result);
 
 ## پرداخت شارژپلاس
 
-پس از ایجاد فاکتور و برای دریافت شارژ و یا بسته اینترنتی api زیر صدا زده می شود:
+پس از ایجاد فاکتور و برای دریافت شارژمستقیم و یا بسته اینترنتی api زیر صدا زده می شود:
 
 <div class="tab-start">
 </div>
