set bank markdowns

--- a/master/ابزار.md
+++ b/master/ابزار.md
@@ -1,6 +1,7 @@
 - [مقدمه](#menu)
 - [پرداخت قبوض خدماتی](#menu)
 - [لیست قبوض پرداختی](#menu)
+- [پرداخت قبض از طریق سپرده](#menu)
 - [لینک‌های مرتبط](#menu)
 
 
@@ -310,6 +311,160 @@ podTools.payedBillList(payedBillListData)
 
 <div class="box-end">
 </div>
+
+## پرداخت قبض از طریق سپرده
+
+با استفاده از این سرویس می توانید قبوض خود را از طریق موجودی سپرده خود انجام دهید
+
+
+
+<div class="tab-start">
+</div>
+
+# [C#](#tab/csharp)
+
+``` csharp
+try
+    {
+        var internalServiceCallVo = InternalServiceCallVo.ConcreteBuilder
+            .SetToken("{Put your ApiToken}")
+            //.SetScVoucherHash({Put your VoucherHash})
+            //.SetScApiKey("{Put your ApiKey}")
+            .Build();
+            var output = new ResultSrv<ServiceCallResultSrv<BankingSrv<string>>>();
+var getDepositInvoiceVo = BillPaymentByDepositVo.ConcreteBuilder
+                    .SetServiceCallParameters(internalServiceCallVo)
+                    .SetUserName("{Put your UserName}")
+                    .SetPrivateKey("{Put your XML PrivateKey}")
+                    .SetBillNumber("{Put your BillNumber}")
+                    .SetDepositNumber("{Put your DepositNumber}")
+                    .SetPaymentId("{Put your PaymentId}")
+                    .Build();
+BankingService.BillPaymentByDeposit(getDepositInvoiceVo, response => Listener.GetResult(response, out output));
+    }
+catch (PodException podException)
+    {
+        Console.WriteLine($"-- {podException.Code}-an error has occured : 
+                              {Environment.NewLine{podException.Message}");
+        throw;
+    }
+catch (Exception exception)
+    {
+        Console.WriteLine(exception.Message);
+        throw;
+    }
+```
+<div class="swaggerLink">http://yourlink</div>
+
+# [Java](#tab/java)
+
+``` java
+  BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
+                .setToken(TOKEN)
+                .setToken_issuer(1)
+                .setServerType(Enum_Server_type.PRODUCTION)
+                .setScApiKey(API_KEY)
+//                .setScVoucherHash(scVoucherHashs)
+                .build();
+
+        PodBanking podBanking = new PodBanking();
+        SignatureInfo signatureInfo = new SignatureInfo();
+        signatureInfo.setPrivateKey("");
+        try {
+            BillPaymentByDepositVo billPaymentByDepositVo = new BillPaymentByDepositVo.Builder(baseInfoVo)
+                    .setUserName("")
+                    .setPaymentId("")
+                    .setDepositNumber("")
+                    .setBillNumber("")
+                    .setSignature(signatureInfo)
+                    .build();
+            podBanking.billPaymentByDeposit(billPaymentByDepositVo, new OnGetResponseListener<BillPaymentByDepositSrv>() {
+                @Override
+                public void onResponse(ResultVo<BillPaymentByDepositSrv> result) {
+
+                    System.out.println(result.getResult().getResult().getIsSuccess());
+
+                }
+
+                @Override
+                public void onFailed(PodException e) {
+                    System.out.println("code : " + e.getCode() + "\nmessage : " + e.getMessage());
+                }
+            });
+        } catch (PodException e) {
+            System.out.println("code : " + e.getCode() + "\nmessage : " + e.getMessage());
+        }
+
+```
+<div class="swaggerLink">http://yourlink</div>
+
+# [PHP](#tab/php)
+
+``` php
+$param =
+        [
+            ## ============== Required Parameters  ====================
+            'UserName' => '',
+            'DepositNumber' => '',
+            'PaymentId' => '',
+            'BillNumber' => '',
+            ## ============== Optional Parameters  ====================
+            'privateKey' => $privateKey,
+            'scVoucherHash' => ['{Put Service Call Voucher Hashes}'],
+            'scApiKey' => '{Put Service Call Api Key}',
+    ];
+    try {
+        $result = $BankingService->billPaymentByDeposit($param);
+        print_r($result);
+    } catch (ValidationException $e) {
+        print_r($e->getResult());
+        print_r($e->getErrorsAsArray());
+    } catch (PodException $e) {
+        print_r($e->getResult());
+    }
+
+```
+<div class="swaggerLink">http://yourlink</div>
+
+# [Nodejs](#tab/nodejs)
+
+``` javascript
+    billPaymentByDepositData = {
+      // ------ REQUIRED ------
+      UserName: 'USERNAME',
+      DepositNumber: 'DEPOSITE',
+      BillNumber: '00000',
+      PaymentId: '00000',
+      scApiKey: 'API KEY',
+
+      // ------ REQUIRED (ONLY ONE OF THESE) ------
+      privateKey: 'PRIVATE KEY'
+      // privateKeyAddress: '.PEM FILE ADDRESS'
+
+      // ------ OPTIONAL ------
+      // scVoucherHash: ['HASH#1', 'HASH#2']
+
+      // ------ OPTIONAL (JUST CHANGE THE CURRENT REQUEST) ------
+      // token: 'TOKEN'
+      // tokenIssuer: 0 | 1
+    };
+    podBanking.billPaymentByDeposit(billPaymentByDepositData)
+      .then(function (result) {
+        console.log(JSON.stringify(result, null, 2));
+      })
+      .catch(function (error) {
+        console.log(JSON.stringify(error, null, 2));
+      });
+
+```
+<div class="swaggerLink">http://yourlink</div>
+
+<div class="tab-end">
+</div>
+
+<div class="box-end">
+</div>
+
 
 ## لینک‌های مرتبط
 
