--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -477,7 +477,7 @@ curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form
 curl_setopt($ch, CURLOPT_POST, 1);
 //require parameters
 $params = [
-    'scProductId' => '3593z',
+    'scProductId' => '35931',
     'invoice_id' => '',
 ];
 curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
